<?xml version="1.0" encoding="utf-8"?>
<!-- SOURCE: https://www.geeksforgeeks.org/how-to-create-a-quiz-app-in-android/ -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Show door for each question -->

    <!-- Show questions in text on screen -->

    <!--Using another LinearLayout for showing buttons
        in horizontal orientation-->

    <ImageView
        android:id="@+id/imagep"
        android:layout_width="493dp"
        android:layout_height="354dp"
        android:contentDescription="Door User is Interacting With"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/door_1" />

    <RelativeLayout
        android:layout_width="536dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerText"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/imagep">

        <!--TrueButton-->

        <!--FalseButton-->
        <Button
            android:id="@+id/trueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:backgroundTint="#5BD91B"
            android:contentDescription="True button"
            android:text="@string/trueText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/falseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:backgroundTint="#E33328"
            android:contentDescription="false button"
            android:text="@string/falseText"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="481dp"
        android:layout_height="94dp"
        android:layout_alignBottom="@+id/imagep"
        android:layout_marginStart="-492dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/imagep">

        <!--PreviousButton-->
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#DFD2D1"
            android:contentDescription="Look at the previous door"
            android:src="@drawable/ic_prev_arrow_24_black"
            android:text="@string/prevText" />

        <!--NextButton-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="400dp"
            android:backgroundTint="#DFD2D1"
            android:contentDescription="Look at next door"
            android:src="@drawable/ic_next_arrow_24_black"
            android:text="@string/nextText" />

    </RelativeLayout>

    <TextView
        android:id="@+id/answerText"
        android:layout_width="537dp"
        android:layout_height="286dp"
        android:layout_gravity="right"
        android:layout_marginStart="-2dp"
        android:layout_toEndOf="@+id/imagep"
        android:contentDescription="Question text user answers"
        android:padding="10dp"
        android:text="@string/questionText"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>